--- a/pages/index.html
+++ b/pages/index.html
@@ -2,22 +2,49 @@
 layout: blank
 home: true
 permalink: /
+class: page-home
 ---
 
-<header id="welcome">
+<header id="welcome" class="mega-card">
 
   <container>
-    <row align="middle" float="center">
-      <column size="50" class="text-center">
-
-        <img src="https://unsplash.it/500/300" alt="">
-
+    <row>
+      <column size="40">
+        <div class="intro">
+          <h1>Header</h1>
+          <p class="lead">
+            Content
+          </p>
+          <a href="#" class="button">Foobar <icon class="icon-up-right"></icon></a>
+        </div>
       </column>
-      <column size="50" class="text-left">
-        <h1 class="no-margin-bottom">Welcome!</h1>
-        <p class="lead">Cutie is a boilerplate for event website.</p>
-        <a href="#info" class="button button-large">Learn more <icon class="icon-right"></icon></a>
+      <column size="60"></column>
+    </row>
+  </container>
+
+</header>
+<section id="example">
+
+  <container>
+    <h1>Section Header</h1>
+    <p>Section content goes here.</p>
+  </container>
+
+</section>
+<header id="welcome" class="mega-card">
+
+  <container>
+    <row>
+      <column size="40">
+        <div class="intro">
+          <h1>Section Header</h1>
+          <p class="lead">
+            Section content goes here.
+          </p>
+          <a href="#" class="button">Foobar <icon class="icon-up-right"></icon></a>
+        </div>
       </column>
+      <column size="60"></column>
     </row>
   </container>
 
